--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -7,11 +7,29 @@
 .container {
     width: var(--default-layout-width);
     max-width: 100%;
-    padding: 0 var(--default-layout-horizontal-spacer);
+    // padding: 0 var(--default-layout-horizontal-spacer);
+    padding: 0 16px 0 var(--default-layout-horizontal-space);
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    flex: 1 1 auto;
+    max-height: 95vh;
     margin-top: var(--default-layout-header-height);
+    width: var(--default-layout-width, 1150px);
     display: flex;
 }
 
 .content {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 24px 0;
+    margin-left: 16px;
+    width: 692px;
+    max-width: 692px;
+    overflow-y: scroll;
+}
+
+.content::-webkit-scrollbar {
+    display: none;
 }
