--- a/src/layouts/components/Sidebar/Sidebar.module.scss
+++ b/src/layouts/components/Sidebar/Sidebar.module.scss
@@ -2,4 +2,13 @@
     width: 356px;
     padding: 20px 0 26px 8px;
     margin-left: -18px;
+    box-shadow: 1px rgba(0, 0, 0, 0.06);
+    overflow-y: hidden;
+    &:hover {
+        overflow-y: scroll;
+    }
+}
+
+.wrapper::-webkit-scrollbar {
+    width: 6px;
 }
